Scrubbed config user data

--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
     "ldap_username": "read-only-admin",
 	"ldap_password": "password",
     "qs_server_hostname": "localhost",
-	"qs_admin_username": "admin",
-	"qs_admin_password": "YWRtaW4=",
+	"qs_admin_username": "sysadminuser",
+	"qs_admin_password": "c3R1cGlkZnVjaw==",
 	"log_file_path": "ldap_user_mgmt_log.txt",
     "log_level": "INFO",
 	"qs_use_whitelist": true,
